# mousetrack

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  create_cmake.sh  run_tests.sh
app/: CMakeLists.txt  camera_view_widget.cpp  camera_view_widget.h  cli_controller.cpp  cli_controller.h  cli_options.cpp  cli_options.h  controller.cpp  controller.h  gui_observer.cpp  gui_observer.h  gui_ref_img_view.cpp  gui_ref_img_view.h  main.cpp  main_window.cpp  main_window.h  matlab_reader.cpp  matlab_reader.h  matlab_reader.test.cc  matlab_reader_concurrent.cpp  matlab_reader_concurrent.h  pipeline.cpp  pipeline.h  pipeline_delegate.h  pipeline_factory.cpp  pipeline_factory.h  pipeline_observer.cpp  pipeline_observer.h  pipeline_timer.cpp  pipeline_timer.h  pipeline_writer.cpp  pipeline_writer.h  qt_controller.cpp  qt_controller.h  ros_bag_reader.cpp  ros_bag_reader.h  test_root.cc  types.h
app/matlab_reader.test/: README.md  create_files.sh  params_R.csv  params_base.csv  params_camchain.csv
app/matlab_reader.test.bag1/: .gitignore
app/sandbox/: sandbox_itto.cpp
cmake/: FindFlann.cmake
examples/: aggressive_gauss.sh  aggressive_gauss_hog.sh  baseline.sh  baseline_benchmark.sh  hog_baseline.sh  hog_baseline_benchmark.sh  hog_kmeans.sh  hog_mean_shift.sh  median_hog.sh  median_open_close.sh  raw_reconstruction.sh  smoothing.sh
lib/: CMakeLists.txt  README.md  test_root.cc
lib/classifier/: classifier.h  knn.cpp  knn.h
lib/clustering/: clustering.h  kmeans.cpp  kmeans.h  kmeans.test.cc  label_clustering.cpp  label_clustering.h  mean_shift.cpp  mean_shift.h  mean_shift.test.cc  mean_shift_cpu_optimized.cpp  mean_shift_cpu_optimized.h  randomClustering.cpp  randomClustering.h  random_clustering.cpp  random_clustering.h  random_clustering.test.cc  single_cluster.cpp  single_cluster.h  single_cluster.test.cc
lib/color/: color.cpp  color.h
lib/descripting/: cog.cpp  cog.h  descripting.h
lib/frame_window_filtering/: background_subtraction.cpp  background_subtraction.h  disparity_bilateral.cpp  disparity_bilateral.h  disparity_gaussian_blur.cpp  disparity_gaussian_blur.h  disparity_median.cpp  disparity_median.h  disparity_morphology.cpp  disparity_morphology.h  frame_window_filtering.h  hog_labeling.cpp  hog_labeling.h  strict_labeling.cpp  strict_labeling.h
lib/generic/: center.cpp  center.h  cluster.cpp  cluster.h  cluster_chain.cpp  cluster_chain.h  cluster_chain_accumulator.cpp  cluster_chain_accumulator.h  cluster_descriptor.cpp  cluster_descriptor.h  cog.test.cc  disparity_map.cpp  disparity_map.h  erase_indices.h  erase_indices.test.cc  explode.cpp  explode.h  explode.test.cc  frame.cpp  frame.h  frame_window.cpp  frame_window.h  point_cloud.cpp  point_cloud.h  point_cloud.test.cc  random_sample.cpp  random_sample.h  random_sample.test.cc  read_csv.cpp  read_csv.h  read_csv.test.cc  read_csv.test.example1.csv  read_png.cpp  read_png.h  read_png.test.cc  resolve_symlink.cpp  resolve_symlink.h  trajectory.cpp  trajectory.h  types.h  (+8 more)
lib/matching/: matching.cpp  matching.h  nearest_neighbour.cpp  nearest_neighbour.h
lib/point_cloud_filtering/: point_cloud_filtering.h  statistical_outlier_removal.cpp  statistical_outlier_removal.h  subsample.cpp  subsample.h
lib/reader/: frame_iterable.h  reader.h
lib/registration/: disparity_registration.cpp  disparity_registration.h  disparity_registration_cpu_optimized.cpp  disparity_registration_cpu_optimized.h  disparity_registration_simple.cpp  disparity_registration_simple.h  registration.h
lib/spatial/: brute_force.h  brute_force.test.cc  cube_iterator.h  cube_iterator.test.cc  cubic_neighborhood.h  cubic_neighborhood.test.cc  flann.h  flann.test.cc  neighborhood.h  oracle_factory.h  spatial_oracle.h  statistical_outlier_detection.h  statistical_outlier_detection.test.cc  uniform_grid.h  uniform_grid.test.cc
lib/trajectory_builder/: cog_trajectory_builder.cpp  cog_trajectory_builder.h  cog_trajectory_builder.test.cc  trajectory_builder.cpp  trajectory_builder.h
notebooks/: color_test.ipynb  mask.ipynb
scripts/: .gitignore  aggregate_csv.py  config_example.m  extract_camera_streams.m  grab_frames.sh  heatmap.py  polygon2cog.py  polygon2cog_test.py  projection_test.py  rotate.py  truthChecker.py  undistrect.m  validation.py
scripts/extract_camera_streams/: README.md  config_example.m
setup/: README.md  pre-commit
